[BUGFIX] `composer.json`: Use lower case vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "WEBcoast/events",
+    "name": "webcoast/events",
     "type": "typo3-cms-extension",
     "description": "Event management for TYPO3 CMS",
     "keywords": [
